<resources>
    <string name="app_name">ModernFoodRecipe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favourite">favourite</string>
    <string name="recipes">Recipes</string>
    <string name="Favourite">Favourite</string>
    <string name="joke">Joke</string>
    <string name="no_internet_connection">NO INTERNET CONNECTION</string>
    <string name="likes">likes</string>
    <string name="vegan">Vegan</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">MAIN COURSE</string>
    <string name="diet_type">DIET TYPE</string>
    <string name="apply_changes">APPLY CHANGES</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="no_favourites_added">No Favourites Added</string>
    <string name="delete_favourite_item">Delete Favourite Item</string>
    <string name="delete_all">Delete All</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop_publishing_software_like_aldus_pagemaker_including_versions_of_lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum</string>
    <string name="share">Share</string>
    <string name="share_the_joke">Share the joke</string>
</resources>