<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/recipe_fragment">

    <fragment
        android:id="@+id/recipe_fragment"
        android:name="com.example.modernfoodrecipe.ui.Mainactivity.fragments.Recipes.Recipe_fragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_recipe_fragment" >

        <action
            android:id="@+id/action_recipe_fragment_to_bottom_sheet_fragment"
            app:destination="@id/RecipiesBottomSheet" />
        <argument
            android:name="backtobottomsheet"
            app:argType="boolean"
            android:defaultValue="false" />
        <action
            android:id="@+id/action_recipe_fragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />

    </fragment>
    <fragment
        android:id="@+id/favourite_fragment"
        android:name="com.example.modernfoodrecipe.ui.Mainactivity.fragments.Favourite.Favourite_fragment"
        android:label="@string/Favourite"
        tools:layout="@layout/fragment_favourite_fragment" >
        <action
            android:id="@+id/action_favourite_fragment_to_detailsActivity"
            app:destination="@id/detailsActivity" />
        <argument
            android:name="Result"
            app:argType="com.example.modernfoodrecipe.models.ResultX"
            app:nullable="true" />
    </fragment>
    <fragment
        android:id="@+id/foodjoke_fragment"
        android:name="com.example.modernfoodrecipe.ui.Mainactivity.fragments.FoodJoke.Food_joke"
        android:label="@string/joke"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/RecipiesBottomSheet"
        android:name="com.example.modernfoodrecipe.ui.Mainactivity.fragments.RecipiesBottomSheet"
        android:label="bottom_sheet_fragment"
        tools:layout="@layout/bottom_sheet_fragment" >
        <action
            android:id="@+id/action_bottom_sheet_fragment_to_recipe_fragment"
            app:destination="@id/recipe_fragment" />
    </dialog>
    <activity
        android:id="@+id/detailsActivity"
        android:name="com.example.modernfoodrecipe.ui.DetailsActivity.DetailsActivity"
        android:label="activity_details"
        tools:layout="@layout/activity_details">
        <argument
            android:name="Result"
            app:argType="com.example.modernfoodrecipe.models.ResultX"
            app:nullable="true" />
    </activity>
</navigation>