<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".ui.fragments.Recipes.RecipiesBottomSheet">

    <TextView
        android:id="@+id/mealtypetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/courgette"
        android:text="@string/meal_type"
        android:textSize="30sp"
        android:textStyle=""
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealtypetextview">

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroupmealtype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
               app:checkedChip="@+id/maincourse"
                app:chipBackgroundColor="@color/lightGray"
                app:chipCornerRadius="10dp"
                app:singleLine="true"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/maincourse"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="@string/main_course" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sidedish"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="SIDE DISH" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/dessert"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="DESSERT" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/appetizer"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="APPETIZER" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/salad"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="SALAD" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/bread"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="BREAD" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/breakfast"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="BREAKFAST" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/soup"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="SOUP" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/beverage"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="BEVERAGE" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/sauce"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="SAUCE" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/marinade"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="MARINADE" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/fingerfood"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="FINGERFOOD" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/snack"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="SNACK" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/drink"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="DRINK" />


            </com.google.android.material.chip.ChipGroup>
        </GridLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/diettypetextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/courgette"
        android:text="@string/diet_type"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollViewdiet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diettypetextview">

        <GridLayout
            android:id="@+id/gridLayoutdiet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/diettypetextview">


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipgroupdietype"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:checkedChip="@id/GlutenFree"
                app:chipBackgroundColor="@color/lightGray"
                app:chipCornerRadius="10dp"
                app:singleLine="true"
                app:singleSelection="true">


                <com.google.android.material.chip.Chip
                    android:id="@+id/GlutenFree"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Gluten-Free" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Ketogenic"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Ketogenic" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Vegetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Vegetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/LactoVegetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Lacto-Vegetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/OvoVegetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Ovo-Vegetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Vegan"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Vegan" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Pescetarian"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Pescetarian" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Paleo"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Paleo" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Primal"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Primal" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Low_FODMAP"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Low_FODMAP" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/Whole30"
                    style="@style/CustomChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/courgette"
                    android:text="Whole30" />


            </com.google.android.material.chip.ChipGroup>
        </GridLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/applybtnbottomsheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/apply_changes"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollViewdiet"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>